
Rift:Storm Legion

Raids
* Endless Eclipse
** Dread Lord Goloch
** Matriarch of Pestilence
** Progenitor
** Kain the Reaper

* Frozen Tempest
** Gangnum
** Gelidra
** Kolmasveli and Toinenveli
** Zaviel
** Crucia

Slivers
* Triumph of the Dragon Queen
** Grand Falconer Zoles
** General Typhiria
** Jultharin
** Cyril

Expert Dungeons
* Archive of Flesh
** Ahzrius
*** New: Alert added for Drastic Renovations.
** Cahail
** Emphalea
** Tzul

* Empyrean Core
** Baird Bringhurst
*** New: UTID updated.
** Kaliban's Bodyguards
*** New: UTID updated for both Bodyguards.
** Core Meltdown
*** New: UTID updated for new Units.
*** Change: Unit changed to Irradiated Monster. 
*** Change: Phase Tracking changed to Death Count, this will change again one a new system is tested.
** Doctor Perfidus
*** New: UTID updated.
** Prince Kaliban
*** New: UTID updated.

* Golem Foundry
** Locomotive Bulwark
*** New: UTID updated.
** C1-0N3
*** New: UTID updated for main C1-0N3
*** New: Added 2 addtional UTIDs found for other versions, left 1 open should there be more.
** Subversionary Liaz
*** New: UTID updated.
** Manslaughter
*** New: UTID updated.
** UV-315
*** New: UTID updated.

* Storm Breaker Protocol
** Sandswarm Onslaught
** Baron Slagstorm
** Telaphalon
** Vellion the Pestilent
** Citybreaker Zidae

* Tower of the Shattered
** Overseer Cowel
*** New: UTID updated.
** Kronox
*** New: UTID updated.
** Psychophage Primakov
*** New: UTID udpated.
** General Thunderscar
*** New: UTID updated.
** Commissar Varoniss
*** New: UTID updated.

* Unhallowed Boneforge
** Ahgnox
*** New: UTID updated.
** Avoxcia
** Bruzhail
*** New: UTID updated.
** Forgelord Helix
** Necrotic Throne
*** New: Necrotic Throne UTID updated.
*** New: Left and Right Throne UTIDs updated.
*** New: Necro Titan Unit template added with UTID.

Normal Dungeons
* Unhallowed Boneforge
** Ahgnox the Corpsekeeper
*** New: UTID updated.
*** Fixed: Name corrected.
** Avoxcia
*** New: UTID updated.