@@ -36,7 +36,7 @@ MOD.Cahail = {
 	Dead = false,
 	Available = false,
 	UnitID = nil,
-	UTID = "none",
+	UTID = "UFABAD20024977673",
 	TimeOut = 5,
 	Triggers = {},
 	Settings = {
