@@ -36,7 +36,7 @@ MOD.Emphalea = {
 	Dead = false,
 	Available = false,
 	UnitID = nil,
-	UTID = "none",
+	UTID = "UFBED7D2C1778E164",
 	TimeOut = 5,
 	Triggers = {},
 	Settings = {
