@@ -36,7 +36,7 @@ MOD.Tzul = {
 	Dead = false,
 	Available = false,
 	UnitID = nil,
-	UTID = "none",
+	UTID = "UFAE998460015A97B",
 	TimeOut = 5,
 	Triggers = {},
 	Settings = {
