@@ -36,7 +36,7 @@ MOD.Vorka = {
 	Dead = false,
 	Available = false,
 	UnitID = nil,
-	UTID = "none",
+	UTID = "UFA680DAF62C96082",
 	TimeOut = 5,
 	Triggers = {},
 	Settings = {
