@@ -36,7 +36,7 @@ MOD.Helix = {
 	Dead = false,
 	Available = false,
 	UnitID = nil,
-	UTID = "none",
+	UTID = "U5605DC34626585B9",
 	TimeOut = 5,
 	Triggers = {},
 	Settings = {
